--- a/boom/戒酒/index.html
+++ b/boom/戒酒/index.html
@@ -60,7 +60,9 @@
 <link rel="stylesheet" href="https://www.openheart.icu/scss/dark-mode.min.7757e4001197b1cd1c03bf75eeef947c882e0bbc26b5096a3c1a66992f55521a.css" integrity="sha256-d1fkABGXsc0cA7917u&#43;UfIguC7wmtQlqPBpmmS9VUho=" media="screen">
 
 
-<script src="https://www.openheart.icu//js/loadCSS.js"></script>
+
+<script src=".../js/loadCSS.js"></script>
+
 <script>
   loadCSS("https://fonts.googleapis.com/css?family=Lora|Montserrat|Fira+Mono|Noto+Serif+SC|Material+Icons");
 </script>
@@ -69,7 +71,9 @@
 
 
   
-    <script src="https://www.openheart.icu//js/toc-collapse.js"></script>
+    
+    <script src=".../js/toc-collapse.js"></script>
+
   
 
 
@@ -710,6 +714,8 @@ app = new Vue({
 });
 </script>
 
-<script src="https://www.openheart.icu//js/journal.js"></script>
+
+<script src=".../js/journal.js"></script>
+
     </body>
 </html>
