--- a/arithmetic/index.html
+++ b/arithmetic/index.html
@@ -59,8 +59,7 @@
 <link rel="stylesheet" href="https://www.openheart.icu/scss/dark-mode.min.7757e4001197b1cd1c03bf75eeef947c882e0bbc26b5096a3c1a66992f55521a.css" integrity="sha256-d1fkABGXsc0cA7917u&#43;UfIguC7wmtQlqPBpmmS9VUho=" media="screen">
 
 
-
-<script src=".../js/loadCSS.js"></script>
+<script src="https://www.openheart.icu//js/loadCSS.js"></script>
 
 <script>
   loadCSS("https://fonts.googleapis.com/css?family=Lora|Montserrat|Fira+Mono|Noto+Serif+SC|Material+Icons");
@@ -586,8 +585,7 @@ app = new Vue({
 });
 </script>
 
-
-<script src=".../js/journal.js"></script>
+<script src="https://www.openheart.icu//js/journal.js"></script>
 
     </body>
 </html>
