--- a/about/index.html
+++ b/about/index.html
@@ -525,7 +525,7 @@ Powered by Hugo | Theme - <a href="https://github.com/amazingrise/hugo-theme-dia
                     <h2 id="关于我">关于我</h2>
 <p>I am Kris Nie.</p>
 <p>Github: <a href="https://github.com/Hyominn">@Hyominn</a></p>
-<p>Ins: <a href="https://www.instagram.com/hehe54213/">@krisnie42</a></p>
+<p>Ins: <a href="https://www.instagram.com/krisnie42/">@krisnie42</a></p>
 <p>Twitter: <a href="https://twitter.com/hehe54213">@hehe54213</a></p>
 <h2 id="关于本站">关于本站</h2>
 <p>This is my Hugo blog :</p>
