--- a/arithmetic/206.-reverse-linked-list/index.html
+++ b/arithmetic/206.-reverse-linked-list/index.html
@@ -713,8 +713,8 @@ $$
     <span style="color:#8b008b;font-weight:bold">return</span> p;
 }
 </code></pre></div><h3 id="时间复杂度分析-1">时间复杂度分析</h3>
-<p>时间复杂度：O(n)，假设 n 是列表的长度，那么时间复杂度为 O(n)。
-空间复杂度：O(n)，由于使用递归，将会使用隐式栈空间。递归深度可能会达到 n 层。</p>
+<p>时间复杂度：O(n)，假设 n 是列表的长度，那么时间复杂度为 O(n)。</p>
+<p>空间复杂度：O(n)，由于使用递归，将会使用隐式栈空间。递归深度可能会达到 n 层。</p>
 
                     
                     <HR width="100%" id="EOF">
