--- a/cs/csharp-in-depth/index.html
+++ b/cs/csharp-in-depth/index.html
@@ -489,8 +489,8 @@ Powered by Hugo | Theme - <a href="https://github.com/amazingrise/hugo-theme-dia
 			$("#busuanzi_value_site_uv").bind('DOMNodeInserted',function(e){
 				console.log('DOMNodeInserted');
 				debugger;
-				$('#busuanzi_value_site_uv_m').html($('#busuanzi_value_site_uv').text()); 
-				$('#busuanzi_value_site_pv_m').html($('#busuanzi_value_site_pv').text());
+				$('#busuanzi_value_site_uv_m').after($('#busuanzi_value_site_uv').text()); 
+				$('#busuanzi_value_site_pv_m').after($('#busuanzi_value_site_pv').text());
 			});
 		})
 	</script>
