--- a/cs/git/index.html
+++ b/cs/git/index.html
@@ -702,8 +702,8 @@ git config --global user.email krisnie@qq.com
 			$("#busuanzi_value_site_uv").bind('DOMNodeInserted',function(e){
 				console.log('DOMNodeInserted');
 				debugger;
-				$('#busuanzi_value_site_uv_m').html($('#busuanzi_value_site_uv').text()); 
-				$('#busuanzi_value_site_pv_m').html($('#busuanzi_value_site_pv').text());
+				$('#busuanzi_value_site_uv_m').after($('#busuanzi_value_site_uv').text()); 
+				$('#busuanzi_value_site_pv_m').after($('#busuanzi_value_site_pv').text());
 			});
 		})
 	</script>
