--- a/cs/mysql/index.html
+++ b/cs/mysql/index.html
@@ -746,8 +746,8 @@ update mysql.user <span style="color:#658b00">set</span> <span style="color:#006
 			$("#busuanzi_value_site_uv").bind('DOMNodeInserted',function(e){
 				console.log('DOMNodeInserted');
 				debugger;
-				$('#busuanzi_value_site_uv_m').html($('#busuanzi_value_site_uv').text()); 
-				$('#busuanzi_value_site_pv_m').html($('#busuanzi_value_site_pv').text());
+				$('#busuanzi_value_site_uv_m').after($('#busuanzi_value_site_uv').text()); 
+				$('#busuanzi_value_site_pv_m').after($('#busuanzi_value_site_pv').text());
 			});
 		})
 	</script>
