--- a/cs/oracle/index.html
+++ b/cs/oracle/index.html
@@ -1231,8 +1231,8 @@ SCOTT   EMP_DEPT_V     DNAME             <span style="color:#8b008b;font-weight:
 			$("#busuanzi_value_site_uv").bind('DOMNodeInserted',function(e){
 				console.log('DOMNodeInserted');
 				debugger;
-				$('#busuanzi_value_site_uv_m').html($('#busuanzi_value_site_uv').text()); 
-				$('#busuanzi_value_site_pv_m').html($('#busuanzi_value_site_pv').text());
+				$('#busuanzi_value_site_uv_m').after($('#busuanzi_value_site_uv').text()); 
+				$('#busuanzi_value_site_pv_m').after($('#busuanzi_value_site_pv').text());
 			});
 		})
 	</script>
