--- a/cs/动态查找表与静态查找表/index.html
+++ b/cs/动态查找表与静态查找表/index.html
@@ -1487,8 +1487,8 @@ a[11] = {0, 1, 16, 24, 35, 47, 59, 62, 73, 88, 99}</p>
 			$("#busuanzi_value_site_uv").bind('DOMNodeInserted',function(e){
 				console.log('DOMNodeInserted');
 				debugger;
-				$('#busuanzi_value_site_uv_m').html($('#busuanzi_value_site_uv').text()); 
-				$('#busuanzi_value_site_pv_m').html($('#busuanzi_value_site_pv').text());
+				$('#busuanzi_value_site_uv_m').after($('#busuanzi_value_site_uv').text()); 
+				$('#busuanzi_value_site_pv_m').after($('#busuanzi_value_site_pv').text());
 			});
 		})
 	</script>
