--- a/boom/index.html
+++ b/boom/index.html
@@ -347,7 +347,7 @@ Powered by Hugo | Theme - <a href="https://github.com/amazingrise/hugo-theme-dia
                     <div class="post-item post-item-no-gaps">
                         <div class="post-item-info-wrapper">
                             <div class="post-item-title">
-                                正常人谁日记啊！？
+                                正常人谁写日记啊！？
                             </div>
                             <div class="post-item-meta">
     2020-11-01
