--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ Powered by Hugo | Theme - <a href="https://github.com/amazingrise/hugo-theme-dia
                     <div class="post-item post-item-no-divider">
                         <div class="post-item-info-wrapper">
                             <div class="post-item-title">
-                                正常人谁日记啊！？
+                                正常人谁写日记啊！？
                             </div>
                             <div class="post-item-summary">
                                 《正常人不写日记》日记节选
