--- a/cs/i-am-a-freshman/index.html
+++ b/cs/i-am-a-freshman/index.html
@@ -866,44 +866,41 @@ Powered by Hugo | Theme - <a href="https://github.com/amazingrise/hugo-theme-dia
 <p>SVP, Senior Vice President 高级副总裁</p>
 <p>President of Products 产品总裁</p>
 <h2 id="mark">Mark</h2>
-<dl>
-<dt>! 叹号 exclamation mark/bang</dt>
-<dt>? 问号 question mark</dt>
-<dt>, 逗号 comma</dt>
-<dt>. 点号 dot/period/point</dt>
-<dd>冒号 colon
-; 分号 semicolon
-” 双引号 quotation marks/double quote
-‘ 单引号/撇号 apostrophe/single quote
-` 重音号 backquote/grave accent
-* 星号 asterisk/star
-+ 加号 plus sign
-- 减号/横线 hyphen/dash/minus sign/
-= 等号 equal sign
-/ 斜线 slash
-\ 反斜线 backslash/escape
-| 竖线 bar/pipe/vertical bar
-_ 下划线 underline/underscore
-$ 美元符号 dollar sign
-@ at at sign
-# 井号 crosshatch/sharp/hash
-% 百分号 percent sign/mod
-&amp; and/和/兼 and/ampersand
-^ 折音号 circumflex/caret
-~ 波浪号 tilde
-{} （左右）花括号/大括号 (left/right|open/close) braces
-[] （左右）方括号/中括号 (left/right|open/close) brackets
-() （左右）圆括号/小括号 (left/right|open/close) parentheses
-&lt;&gt; 尖括号 angle brackets
-&lt; 大于号 less than
-&gt; 小于号 greater than</dd>
-</dl>
+<p><code>!</code> 叹号 exclamation mark/bang</p>
+<p><code>?</code> 问号 question mark</p>
+<p><code>,</code> 逗号 comma</p>
+<p><code>.</code> 点号 dot/period/point</p>
+<p><code>:</code> 冒号 colon</p>
+<p><code>;</code> 分号 semicolon</p>
+<p><code>”</code> 双引号 quotation marks/double quote</p>
+<p><code>‘</code> 单引号/撇号 apostrophe/single quote</p>
+<p>`  重音号 backquote/grave accent</p>
+<p><code>+</code> 加号 plus sign</p>
+<p><code>-</code> 减号/横线 hyphen/dash/minus sign/</p>
+<p><code>=</code> 等号 equal sign</p>
+<p><code>/</code> 斜线 slash</p>
+<p><code>\ </code>反斜线 backslash/escape</p>
+<p><code>|</code>竖线 bar/pipe/vertical bar</p>
+<p><code>_</code>下划线 underline/underscore</p>
+<p><code>$</code> 美元符号 dollar sign</p>
+<p><code>@</code> at at sign</p>
+<p><code>#</code> 井号 crosshatch/sharp/hash</p>
+<p><code>%</code> 百分号 percent sign/mod</p>
+<p><code>&amp;</code> and/和/兼 and/ampersand</p>
+<p><code>^</code> 折音号 circumflex/caret</p>
+<p><code>~</code> 波浪号 tilde</p>
+<p><code>{}</code> （左右）花括号/大括号 (left/right|open/close) braces</p>
+<p><code>[]</code> （左右）方括号/中括号 (left/right|open/close) brackets</p>
+<p><code>()</code> （左右）圆括号/小括号 (left/right|open/close) parentheses</p>
+<p><code>&lt;&gt;</code> 尖括号 angle brackets</p>
+<p><code>&lt;</code> 大于号 less than</p>
+<p><code>&gt;</code> 小于号 greater than</p>
 <p>葡语中的变音符号（diacritic mark）在英文中的读法：</p>
-<p>^ circumflex/caret
-~ tilde/squiggle
-´ acute
-` grave
-ç cedilla</p>
+<p><code>^</code> circumflex/care</p>
+<p><code>~</code> tilde/squiggle</p>
+<p><code>´</code> acute</p>
+<p>` grave</p>
+<p><code>ç</code> cedilla</p>
 <p>希腊字母表</p>
 <p>α　Α　alpha /alpha/ h表示送气音，在古希腊语中尚没有音位/f/，所以/pha/的发音类似普通话的“趴”。</p>
 <p>β　Β　beta /be:ta/ /e:/表示长元音，/e/的发音不是英语D.J.音标里的[e]，而类似K.K.音标里的/e/或者法语的/e/。/t/不送气，所以/ta/类似普通话“搭”而不是“他”。</p>
