--- a/about/index.html
+++ b/about/index.html
@@ -529,7 +529,7 @@ Powered by Hugo | Theme - <a href="https://github.com/amazingrise/hugo-theme-dia
 <p>Github: <a href="https://github.com/Hyominn">@Hyominn</a></p>
 <p>Ins: <a href="https://www.instagram.com/krisnie42/">@krisnie42</a></p>
 <p>Twitter: <a href="https://twitter.com/hehe54213">@hehe54213</a></p>
-<p>Weibo: <a href="https://weibo.com/1772713151/profile">@她的头发蓬松如云</a></p>
+<p>Weibo: <a href="https://weibo.com/u/1772713151">@她的头发蓬松如云</a></p>
 <h2 id="关于本站">关于本站</h2>
 <p>This is my Hugo blog :</p>
 <blockquote>
