--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@ Weibo: @她的头发蓬松如云
 关于本站 This is my Hugo blog :
  42th openheart.
  用来记录我的第42次不开心
-. ├── Gossip	#谨言慎行 ├── ComputerScience	#计算机科学 ├── Arithmetic	#算法 ├── About	#关于 ├── Category	#归类 └── Tags	#标签 Thanks for theme makers:
+. ├── Gossip #谨言慎行 ├── ComputerScience #计算机科学 ├── Arithmetic #算法 ├── About #关于 ├── Category #归类 └── Tags #标签 Thanks for theme makers:
 Hugo Theme Diary by Rise Ported from Makito&rsquo;s Journal." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://www.openheart.icu/about/" />
@@ -46,7 +46,7 @@ Weibo: @她的头发蓬松如云
 关于本站 This is my Hugo blog :
  42th openheart.
  用来记录我的第42次不开心
-. ├── Gossip	#谨言慎行 ├── ComputerScience	#计算机科学 ├── Arithmetic	#算法 ├── About	#关于 ├── Category	#归类 └── Tags	#标签 Thanks for theme makers:
+. ├── Gossip #谨言慎行 ├── ComputerScience #计算机科学 ├── Arithmetic #算法 ├── About #关于 ├── Category #归类 └── Tags #标签 Thanks for theme makers:
 Hugo Theme Diary by Rise Ported from Makito&rsquo;s Journal."/>
 
 
@@ -529,7 +529,7 @@ Powered by Hugo | Theme - <a href="https://github.com/amazingrise/hugo-theme-dia
 <p>Github: <a href="https://github.com/Hyominn">@Hyominn</a></p>
 <p>Ins: <a href="https://www.instagram.com/krisnie42/">@krisnie42</a></p>
 <p>Twitter: <a href="https://twitter.com/hehe54213">@hehe54213</a></p>
-<p>Weibo: <a href="https://weibo.com/u/1772713151">@她的头发蓬松如云</a></p>
+<p>Weibo: <a href="https://weibo.com/1772713151/profile">@她的头发蓬松如云</a></p>
 <h2 id="关于本站">关于本站</h2>
 <p>This is my Hugo blog :</p>
 <blockquote>
@@ -537,12 +537,12 @@ Powered by Hugo | Theme - <a href="https://github.com/amazingrise/hugo-theme-dia
 </blockquote>
 <p>用来记录我的第42次不开心</p>
 <pre><code>.
-├── Gossip			#谨言慎行
-├── ComputerScience		#计算机科学
-├── Arithmetic			#算法
-├── About			#关于
-├── Category			#归类
-└── Tags			#标签
+├── Gossip #谨言慎行
+├── ComputerScience #计算机科学
+├── Arithmetic #算法
+├── About #关于
+├── Category #归类
+└── Tags #标签
 </code></pre><p><em>Thanks for theme makers:</em></p>
 <p><em>Hugo Theme <a href="https://github.com/amazingrise/hugo-theme-diary">Diary</a> by <a href="https://amazingrise.net/">Rise</a> Ported from <a href="https://mak1t0.cc/">Makito</a>&rsquo;s <a href="https://github.com/SumiMakito/hexo-theme-journal/">Journal.</a></em></p>
 
