--- a/about/index.html
+++ b/about/index.html
@@ -219,7 +219,7 @@ krisnie42@gmail.com
 	site uv:<span id="busuanzi_value_site_uv"></span>
 </span>
 <br>
-鲁ICP备20007116号
+<a href="https://beian.miit.gov.cn/">鲁ICP备20007116号-1</a>
 <br>
 Powered by Hugo | Theme - <a href="https://github.com/amazingrise/hugo-theme-diary">Diary</a>
 
