--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ Powered by Hugo | Theme - <a href="https://github.com/amazingrise/hugo-theme-dia
                     <div class="post-item post-item-no-divider">
                         <div class="post-item-info-wrapper">
                             <div class="post-item-title">
-                                C# Special Characters
+                                CSharp Special Characters
                             </div>
                             <div class="post-item-summary">
                                 ?$@
