--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
 
 <meta property="og:title" content="About" />
 <meta property="og:description" content="关于我 I am Kris Nie.
-Github: @Hyominn
+Github: @KrisNie
 Ins: @krisnie42
 Twitter: @hehe54213
 Weibo: @她的头发蓬松如云
@@ -39,7 +39,7 @@ Hugo Theme Diary by Rise Ported from Makito&rsquo;s Journal." />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
 <meta name="twitter:description" content="关于我 I am Kris Nie.
-Github: @Hyominn
+Github: @KrisNie
 Ins: @krisnie42
 Twitter: @hehe54213
 Weibo: @她的头发蓬松如云
@@ -526,7 +526,7 @@ Powered by Hugo | Theme - <a href="https://github.com/amazingrise/hugo-theme-dia
                 
                     <h2 id="关于我">关于我</h2>
 <p>I am Kris Nie.</p>
-<p>Github: <a href="https://github.com/Hyominn">@Hyominn</a></p>
+<p>Github: <a href="https://github.com/KrisNie">@KrisNie</a></p>
 <p>Ins: <a href="https://www.instagram.com/krisnie42/">@krisnie42</a></p>
 <p>Twitter: <a href="https://twitter.com/hehe54213">@hehe54213</a></p>
 <p>Weibo: <a href="https://weibo.com/u/1772713151">@她的头发蓬松如云</a></p>
