--- a/boom/写给未来的孩子/index.html
+++ b/boom/写给未来的孩子/index.html
@@ -531,7 +531,7 @@ Powered by Hugo | Theme - <a href="https://github.com/amazingrise/hugo-theme-dia
 <p>正直、勇敢、独立。</p>
 <p>我希望你是一个优秀的人。</p>
 </blockquote>
-<p>这首散文诗选自张敏老师的《<a href="https://book.douban.com/subject/26687021/">木屐声声</a>》一书 ，我读了好几遍，想从头当个孩子。</p>
+<p>这首散文诗选自张敏老师的《<a href="https://book.douban.com/subject/26687021/">木屐声声</a>》 ，我读了好几遍，想从头当个孩子。</p>
 
                     
                     <HR width="100%" id="EOF">
