--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ Powered by Hugo | Theme - <a href="https://github.com/amazingrise/hugo-theme-dia
                                 To Children
                             </div>
                             <div class="post-item-summary">
-                                孩子
+                                写给未来的孩子
                             </div>
                             <div class="post-item-meta">
     2021-02-17
