--- a/cs/i-am-a-freshman/index.html
+++ b/cs/i-am-a-freshman/index.html
@@ -768,7 +768,7 @@ Powered by Hugo | Theme - <a href="https://github.com/amazingrise/hugo-theme-dia
 <p>Please join me in welcoming Kris to Infor and give them your great support in every way possible!</p>
 <p>Welcome to the team!</p>
 <p>Thank you. It is my honor to be able to join our team.</p>
-<p>Don&rsquo;t spin your wheels! 这里的spin your wheels<a href="https://dictionary.cambridge.org/zhs/%E8%AF%8D%E5%85%B8/%E8%8B%B1%E8%AF%AD/spin-your-wheels">(cambridge.org)</a> 可以理解为&quot;to waste time doing things that achieve nothing&quot;</p>
+<p>Don&rsquo;t spin your wheels! 这里的spin your wheels<a href="https://dictionary.cambridge.org/zhs/%E8%AF%8D%E5%85%B8/%E8%8B%B1%E8%AF%AD/spin-your-wheels">(cambridge.org)</a> 可以理解为&quot;to waste time doing things that achieve nothing&rdquo;</p>
 <p>You&rsquo;re in good company. 你是一个好合作伙伴。此处的company为朋友、同伴</p>
 <p>I really enjoy your company. 我很喜欢你的陪伴。此处的company为陪伴</p>
 <p>She&rsquo;s not coming – she&rsquo;s got company. 她来不了了，她家里有客人。此处的company为客人</p>
