--- a/boom/index.html
+++ b/boom/index.html
@@ -342,12 +342,12 @@ Powered by Hugo | Theme - <a href="https://github.com/amazingrise/hugo-theme-dia
                 </div>
             </a>
             
-            <a href="/boom/%E5%86%99%E7%BB%99%E6%9C%AA%E6%9D%A5%E7%9A%84%E5%AD%A9%E5%AD%90/" class="a-block">
+            <a href="/boom/%E7%BB%99%E6%88%91%E6%9C%AA%E6%9D%A5%E7%9A%84%E5%AD%A9%E5%AD%90/" class="a-block">
                 <div class="post-item-wrapper">
                     <div class="post-item post-item-no-gaps">
                         <div class="post-item-info-wrapper">
                             <div class="post-item-title">
-                                To Children
+                                To My Children
                             </div>
                             <div class="post-item-meta">
     2021-02-17
