--- a/about/index.html
+++ b/about/index.html
@@ -18,10 +18,10 @@
 
 <meta property="og:title" content="About" />
 <meta property="og:description" content="About Me I am Kris Nie.
-Github: @KrisNie
-Ins: @krisnie42
-Twitter: @hehe54213
-Weibo: @她的头发蓬松如云
+GITHUB: @KrisNie
+IG: @krisnie42
+TWITTER: @hehe54213
+WEIBO: @她的头发蓬松如云
  About This Site This is my Hugo blog :
  42th openheart.
  用来记录我的第42次不开心
@@ -39,10 +39,10 @@ Hugo Theme Diary by Rise Ported from Makito&rsquo;s Journal." />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
 <meta name="twitter:description" content="About Me I am Kris Nie.
-Github: @KrisNie
-Ins: @krisnie42
-Twitter: @hehe54213
-Weibo: @她的头发蓬松如云
+GITHUB: @KrisNie
+IG: @krisnie42
+TWITTER: @hehe54213
+WEIBO: @她的头发蓬松如云
  About This Site This is my Hugo blog :
  42th openheart.
  用来记录我的第42次不开心
@@ -602,10 +602,10 @@ Powered by Hugo | Theme - <a href="https://github.com/amazingrise/hugo-theme-dia
                 
                     <h2 id="about-me">About Me</h2>
 <p>I am Kris Nie.</p>
-<p>Github: <a href="https://github.com/KrisNie">@KrisNie</a></p>
-<p>Ins: <a href="https://www.instagram.com/krisnie42/">@krisnie42</a></p>
-<p>Twitter: <a href="https://twitter.com/hehe54213">@hehe54213</a></p>
-<p>Weibo: <a href="https://weibo.com/u/1772713151">@她的头发蓬松如云</a></p>
+<p>GITHUB: <a href="https://github.com/KrisNie">@KrisNie</a></p>
+<p>IG: <a href="https://www.instagram.com/krisnie42/">@krisnie42</a></p>
+<p>TWITTER: <a href="https://twitter.com/hehe54213">@hehe54213</a></p>
+<p>WEIBO: <a href="https://weibo.com/u/1772713151">@她的头发蓬松如云</a></p>
 <hr>
 <h2 id="about-this-site">About This Site</h2>
 <p>This is my Hugo blog :</p>
